core/codegen/tests/ui-fail-nightly/catch_type_errors.stderr
error[E0277]: the trait bound `usize: Responder<'_, '_>` is not satisfied
 --> tests/ui-fail-nightly/catch_type_errors.rs:5:1
  |
5 | #[catch(404)]
  | ^^^^^^^^^^^^^ the trait `Responder<'_, '_>` is not implemented for `usize`
  |
  = help: the following other types implement trait `Responder<'r, 'o>`:
            <&'o [u8] as Responder<'r, 'o>>
            <&'o str as Responder<'r, 'o>>
            <() as Responder<'r, 'static>>
            <(ContentType, R) as Responder<'r, 'o>>
            <(Status, R) as Responder<'r, 'o>>
            <Accepted<R> as Responder<'r, 'o>>
            <Arc<[u8]> as Responder<'r, 'static>>
            <Arc<str> as Responder<'r, 'static>>
          and 40 others
  = note: this error originates in the attribute macro `catch` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `bool: Responder<'_, '_>` is not satisfied
  --> tests/ui-fail-nightly/catch_type_errors.rs:10:1
   |
10 | #[catch(404)]
   | ^^^^^^^^^^^^^ the trait `Responder<'_, '_>` is not implemented for `bool`
   |
   = help: the following other types implement trait `Responder<'r, 'o>`:
             <&'o [u8] as Responder<'r, 'o>>
             <&'o str as Responder<'r, 'o>>
             <() as Responder<'r, 'static>>
             <(ContentType, R) as Responder<'r, 'o>>
             <(Status, R) as Responder<'r, 'o>>
             <Accepted<R> as Responder<'r, 'o>>
             <Arc<[u8]> as Responder<'r, 'static>>
             <Arc<str> as Responder<'r, 'static>>
           and 40 others
   = note: this error originates in the attribute macro `catch` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-fail-nightly/catch_type_errors.rs:16:17
   |
16 | fn f3(_request: bool) -> usize {
   |    --           ^^^^ expected `bool`, found `&rocket::Request<'_>`
   |    |
   |    arguments to this function are incorrect
   |
note: function defined here
  --> tests/ui-fail-nightly/catch_type_errors.rs:16:4
   |
16 | fn f3(_request: bool) -> usize {
   |    ^^-

error[E0277]: the trait bound `usize: Responder<'_, '_>` is not satisfied
  --> tests/ui-fail-nightly/catch_type_errors.rs:15:1
   |
15 | #[catch(404)]
   | ^^^^^^^^^^^^^ the trait `Responder<'_, '_>` is not implemented for `usize`
   |
   = help: the following other types implement trait `Responder<'r, 'o>`:
             <&'o [u8] as Responder<'r, 'o>>
             <&'o str as Responder<'r, 'o>>
             <() as Responder<'r, 'static>>
             <(ContentType, R) as Responder<'r, 'o>>
             <(Status, R) as Responder<'r, 'o>>
             <Accepted<R> as Responder<'r, 'o>>
             <Arc<[u8]> as Responder<'r, 'static>>
             <Arc<str> as Responder<'r, 'static>>
           and 40 others
   = note: this error originates in the attribute macro `catch` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `usize: Responder<'_, '_>` is not satisfied
  --> tests/ui-fail-nightly/catch_type_errors.rs:20:1
   |
20 | #[catch(404)]
   | ^^^^^^^^^^^^^ the trait `Responder<'_, '_>` is not implemented for `usize`
   |
   = help: the following other types implement trait `Responder<'r, 'o>`:
             <&'o [u8] as Responder<'r, 'o>>
             <&'o str as Responder<'r, 'o>>
             <() as Responder<'r, 'static>>
             <(ContentType, R) as Responder<'r, 'o>>
             <(Status, R) as Responder<'r, 'o>>
             <Accepted<R> as Responder<'r, 'o>>
             <Arc<[u8]> as Responder<'r, 'static>>
             <Arc<str> as Responder<'r, 'static>>
           and 40 others
   = note: this error originates in the attribute macro `catch` (in Nightly builds, run with -Z macro-backtrace for more info)
